Fix:     .nav-links align top

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -143,7 +143,7 @@
         height: 100vh;
         background: rgba(75, 75, 75, 0.966);
         flex-direction: column;
-        padding: 80px 2rem 2rem;
+        padding: 50% 2rem 2rem;
         transition: right 0.3s ease;
         z-index: 999;
         margin: 0;
